Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-1315

Byte to integer conversions fail on platforms with unsigned char type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.9.0, 1.8.4
    • 1.9.0, 1.8.5
    • C++
    • None

    Description

      When building the C++ library on a platform where char is by default unsigned, byte-to-integer expansion is incorrect in orc::expandBytesToIntegers as well as in a few unit tests.
      This can be reproduced on any CPU architecture when building with gcc by compiling with -funsigned-char.

      Attachments

        Activity

          People

            luffyZ Hao Zou
            luffyZ Hao Zou
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: