ORC-1315:[C++] Fix byte to integer conversions fail on platforms with unsigned char type.