c++/src/RLEv1.cc
@@ -146,7 +146,7 @@ namespace orc {
       bufferStart = static_cast<const char*>(bufferPointer);
       bufferEnd = bufferStart + bufferLength;
     }
-    return *(bufferStart++);
+    return static_cast<signed char>(*(bufferStart++));
   }
 
   uint64_t RleDecoderV1::readLong() {
