c++/test/TestByteRle.cc
@@ -50,8 +50,8 @@ namespace orc {
     char buffer[258];
     char notNull[266];
     char result[266];
-    buffer[0] = -128;
-    buffer[129] = -128;
+    buffer[0] = static_cast<char>(-128);
+    buffer[129] = static_cast<char>(-128);
     for (int i = 0; i < 128; ++i) {
       buffer[1 + i] = static_cast<char>(i);
       buffer[130 + i] = static_cast<char>(128 + i);
@@ -180,7 +180,7 @@ namespace orc {
         createByteRleDecoder(std::unique_ptr<orc::SeekableInputStream>(
                                  new SeekableArrayInputStream(buffer, ARRAY_SIZE(buffer), 3)),
                              getDefaultReaderMetrics());
-    std::vector<char> data(16, -1);
+    std::vector<char> data(16, static_cast<char>(-1));
     std::vector<char> notNull(data.size());
     for (size_t i = 0; i < data.size(); ++i) {
       notNull[i] = (i + 1) % 2;
@@ -192,14 +192,14 @@ namespace orc {
           EXPECT_EQ((i * data.size() + j) / 2, data[j])
               << "Output wrong at " << (i * data.size() + j);
         } else {
-          EXPECT_EQ(-1, data[j]) << "Output wrong at " << (i * data.size() + j);
+          EXPECT_EQ(static_cast<char>(-1), data[j]) << "Output wrong at " << (i * data.size() + j);
         }
       }
     }
     for (size_t i = 0; i < 8; ++i) {
       rle->next(data.data(), data.size(), notNull.data());
       for (size_t j = 0; j < data.size(); ++j) {
-        EXPECT_EQ(j % 2 == 0 ? -36 : -1, data[j])
+        EXPECT_EQ(j % 2 == 0 ? static_cast<char>(-36) : static_cast<char>(-1), data[j])
             << "Output wrong at " << (i * data.size() + j + 32);
       }
     }
@@ -212,26 +212,26 @@ namespace orc {
         createByteRleDecoder(std::unique_ptr<orc::SeekableInputStream>(
                                  new SeekableArrayInputStream(buffer, ARRAY_SIZE(buffer))),
                              getDefaultReaderMetrics());
-    std::vector<char> data(16, -1);
+    std::vector<char> data(16, static_cast<char>(-1));
     std::vector<char> allNull(data.size(), 0);
     std::vector<char> noNull(data.size(), 1);
     rle->next(data.data(), data.size(), allNull.data());
     for (size_t i = 0; i < data.size(); ++i) {
-      EXPECT_EQ(-1, data[i]) << "Output wrong at " << i;
+      EXPECT_EQ(static_cast<char>(-1), data[i]) << "Output wrong at " << i;
     }
     rle->next(data.data(), data.size(), noNull.data());
     for (size_t i = 0; i < data.size(); ++i) {
       EXPECT_EQ(i, data[i]) << "Output wrong at " << i;
-      data[i] = -1;
+      data[i] = static_cast<char>(-1);
     }
     rle->next(data.data(), data.size(), allNull.data());
     for (size_t i = 0; i < data.size(); ++i) {
-      EXPECT_EQ(-1, data[i]) << "Output wrong at " << i;
+      EXPECT_EQ(static_cast<char>(-1), data[i]) << "Output wrong at " << i;
     }
     for (size_t i = 0; i < 4; ++i) {
       rle->next(data.data(), data.size(), noNull.data());
       for (size_t j = 0; j < data.size(); ++j) {
-        EXPECT_EQ(-36, data[j]) << "Output wrong at " << i;
+        EXPECT_EQ(static_cast<char>(-36), data[j]) << "Output wrong at " << i;
       }
     }
     rle->next(data.data(), data.size(), allNull.data());
@@ -989,7 +989,7 @@ namespace orc {
     someNull[1] = 1;
     std::vector<char> allNull(data.size(), 0);
     for (size_t i = 0; i < 16384; i += 5) {
-      data.assign(data.size(), -1);
+      data.assign(data.size(), static_cast<char>(-1));
       rle->next(data.data(), data.size(), someNull.data());
       EXPECT_EQ(0, data[0]) << "Output wrong at " << i;
       EXPECT_EQ(0, data[2]) << "Output wrong at " << i;
@@ -998,7 +998,7 @@ namespace orc {
         rle->skip(4);
       }
       rle->skip(0);
-      data.assign(data.size(), -1);
+      data.assign(data.size(), static_cast<char>(-1));
       rle->next(data.data(), data.size(), allNull.data());
       for (size_t j = 0; j < data.size(); ++j) {
         EXPECT_EQ(0, data[j]) << "Output wrong at " << i << ", " << j;
@@ -1230,7 +1230,7 @@ namespace orc {
       rle->seek(location);
       rle->next(data.data(), 1, noNull.data());
       EXPECT_EQ(i < 8192 ? i & 1 : (i / 3) & 1, data[i]) << "Output wrong at " << i;
-      data[0] = -1;
+      data[0] = static_cast<char>(-1);
       rle->next(data.data(), 1, allNull.data());
       EXPECT_EQ(0, data[0]) << "Output wrong at " << i;
     } while (i != 0);
